Se realizan cambios al navbar, se le dan márgenes al main más amplios, para que los cards no sean tan grandes.

--- a/css/_navBar.scss
+++ b/css/_navBar.scss
@@ -96,7 +96,20 @@ nav{
     #user-nav-img{
         margin-right: 6vw;
     }
+
+    #logo-nav-img{
+        margin-left: 6vw;
+    }
     
 }
 
 /*END Desktop version*/
+
+@media screen and (min-width: 1300px){
+    #user-nav-img{
+        margin-right: 14vw;
+    }
+    #logo-nav-img{
+        margin-left: 14vw;
+    }
+}
