--- a/css/_rightAside.scss
+++ b/css/_rightAside.scss
@@ -8,7 +8,7 @@
         box-sizing: border-box;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         border-radius: 12px;
-        margin: 15px 15px 15px 15px;
+        margin: 15px;
         .img-card{
             height: 115px;
             max-width: 100%;
@@ -85,3 +85,10 @@
 }
 
 /*END Desktop version*/
+
+@media screen and (min-width: 1300px){
+    #right-aside{
+        margin-right: 12vw;
+    }
+}
+
