--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ body {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  margin: 15px 15px 15px 15px;
+  margin: 15px;
 }
 
 #right-aside .right-cards .img-card {
@@ -165,7 +165,7 @@ body {
 }
 
 #right-aside .right-cards ul li:hover {
-  background-color: #F9FAFA;
+  background-color: white;
 }
 
 #right-aside .right-cards ul li:hover p {
@@ -174,6 +174,14 @@ body {
 
 #right-aside .right-cards ul li span {
   font-size: smaller;
+}
+
+#right-aside .right-cards ul li span button {
+  background-color: #3B49DF;
+  border-color: #3B49DF;
+  color: #F9FAFA;
+  border-radius: 5px;
+  font-size: 0.875rem;
 }
 
 /*Desktop version*/
@@ -185,6 +193,12 @@ body {
 }
 
 /*END Desktop version*/
+@media screen and (min-width: 1300px) {
+  #right-aside {
+    margin-right: 12vw;
+  }
+}
+
 nav {
   height: 55px;
   background-color: white;
@@ -267,17 +281,29 @@ nav .righthead button:hover {
   #user-nav-img {
     margin-right: 6vw;
   }
+  #logo-nav-img {
+    margin-left: 6vw;
+  }
 }
 
 /*END Desktop version*/
+@media screen and (min-width: 1300px) {
+  #user-nav-img {
+    margin-right: 14vw;
+  }
+  #logo-nav-img {
+    margin-left: 14vw;
+  }
+}
+
 .l-aside {
-  margin-left: 5vw;
   max-width: 50%;
   min-height: 800px;
   background-color: #EEF0F1;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   /*Se pone display none hasta que crezca a tablet se muestre, no antes*/
   display: none;
+  margin: 15px;
 }
 
 .l-aside .l-aside-prim {
@@ -367,6 +393,19 @@ nav .righthead button:hover {
 }
 
 /*END Tablet version*/
+@media screen and (min-width: 1024px) {
+  .l-aside {
+    margin-left: 5vw;
+  }
+}
+
+/*END Desktop version*/
+@media screen and (min-width: 1300px) {
+  .l-aside {
+    margin-left: 12vw;
+  }
+}
+
 /*Card Principal*/
 .main-card {
   cursor: pointer;
