--- a/css/style.css
+++ b/css/style.css
@@ -88,9 +88,11 @@ body {
 
 #right-aside {
   display: none;
+  cursor: pointer;
 }
 
 #right-aside .right-cards {
+  min-width: 300px;
   background-color: #F9FAFA;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   display: -webkit-box;
