se agregan detalles del right aside

--- a/css/_rightAside.scss
+++ b/css/_rightAside.scss
@@ -2,7 +2,7 @@
     display: none;
     cursor: pointer;
     .right-cards{
-        min-width: 300px;
+        
         background-color: $asideRight-bg-color;
         font-family: $font-family;
         display: flex;
@@ -89,6 +89,10 @@
 /*END Desktop version*/
 
 @media screen and (min-width: 1300px){
+
+    .right-cards{
+        min-width: 300px;
+    }
     #right-aside{
         margin-right: 12vw;
     }
