--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -15,6 +15,7 @@ $profilePicture-menu-active: #F2F2F3;
 $saved-active: #3B49DF;
 $saved-bg-active: #DCDFEF;
 $footer-bg-color: #D8DBDF;
+$button-inside-color: #5C1CE3;
 
 
 
