Se corrigen margenes de asides y tamaños de contenedores, se agrega un anchor para vincular a postinside.html

--- a/css/_rightAside.scss
+++ b/css/_rightAside.scss
@@ -84,9 +84,12 @@
         display: block;
         margin-right: 5vw;
     }
+    .right-cards{
+        min-width: 250px;
+    }
 }
 
-/*END Desktop version*/
+/*END second Desktop version*/
 
 @media screen and (min-width: 1300px){
 
