--- a/css/style.css
+++ b/css/style.css
@@ -191,9 +191,12 @@ body {
     display: block;
     margin-right: 5vw;
   }
+  .right-cards {
+    min-width: 250px;
+  }
 }
 
-/*END Desktop version*/
+/*END second Desktop version*/
 @media screen and (min-width: 1300px) {
   .right-cards {
     min-width: 300px;
@@ -411,6 +414,11 @@ nav .righthead button:hover {
 }
 
 /*Card Principal*/
+#main-anchor {
+  text-decoration: none;
+  color: black;
+}
+
 .main-card {
   cursor: pointer;
   font-size: 0.9rem;
