--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,20 @@ body {
 
 }*/
 .f-dir-column {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-direction: normal !important;
+      -ms-flex-direction: column !important;
+          flex-direction: column !important;
 }
 
 .d-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.d-block {
+  display: block;
 }
 
 .d-none {
@@ -84,6 +88,10 @@ body {
 
 .b-radius-100 {
   border-radius: 100%;
+}
+
+.padding-0 {
+  padding: 0 !important;
 }
 
 #right-aside {
@@ -739,4 +747,105 @@ footer div p b {
 }
 
 /*END Tablet version*/
+.avatarR span {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  margin: 15px 15px;
+}
+
+.avatarR span img {
+  width: 48px;
+  height: 48px;
+  border-radius: 20px;
+  top: -15px;
+  position: relative;
+}
+
+.right-cards {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.right-cards .black-header {
+  width: 100%;
+  height: 36px;
+  background-color: black;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.right-cards section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  position: relative;
+  top: -15px;
+  height: 40px;
+}
+
+.right-cards .inside-header > p {
+  padding: 0px 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1.5rem;
+}
+
+.right-cards .button-inside {
+  background-color: #5C1CE3;
+  color: white;
+  margin: 5px 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 5px;
+  height: 40px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.right-cards span {
+  padding: 0px 15px;
+}
+
+.right-cards span label {
+  font-size: smaller;
+  color: #4D5760;
+}
+
+.trending header span {
+  color: #5C1CE3;
+}
+
+.trending div {
+  padding: 0px 15px;
+}
+
+.trending div img {
+  width: 25px;
+  height: 25px;
+  border-radius: 20px;
+}
+
+.trending div p {
+  display: inline;
+  margin-bottom: 20px;
+  line-height: 42px;
+}
+
+.trending div p:hover {
+  color: #3B49DF;
+}
+
+.trending div span {
+  margin-left: 14px;
+  color: #4D5760;
+}
 /*# sourceMappingURL=style.css.map */
